[tool.poetry]
name = "lf_toolkit"
version = "0.0.1"
description = ""
authors = ["Andreas Pfurtscheller <andreas.pfurtscheller23@imperial.ac.uk>"]
readme = "README.md"
packages = [{ include = "lf_toolkit" }]
include = [{ path = "lf_toolkit/py.typed" }]

[tool.poetry.dependencies]
latex2sympy = { git = "https://github.com/purdue-tlt/latex2sympy.git", rev = "1.11.1" }
antlr4-python3-runtime = "^4.13"
python = "^3.9"
sympy = "^1.12"
lark = "^1.1.9"

[tool.poetry.dev-dependencies]
black = "24.2.0"
flake8 = "7.0.0"
isort = "5.13.2"
pre-commit = "3.6.2"
pytest = "8.1.1"
pytest-cov = "4.1.0"

[tool.isort]
line_length = 88
force_single_line = true
force_grid_wrap = 0
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
filter_files = true
known_first_party = "lf_toolkit"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "LF", "FIRSTPARTY", "LOCALFOLDER"]
known_lf = [""]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
