[tool.poetry]
name = "lf_toolkit"
version = "0.0.1"
description = ""
authors = ["Andreas Pfurtscheller <andreas.pfurtscheller23@imperial.ac.uk>"]
readme = "README.md"
packages = [{ include = "lf_toolkit" }]
include = [{ path = "lf_toolkit/py.typed" }]

##########################
# core dependencies
##########################

[tool.poetry.dependencies]
python = "^3.9"
sympy = "1.12"
ujson = "5.10.0"
anyio = "4.4.0"
jsonrpcserver = "5.0.9"

##########################
# dev dependencies
##########################

[tool.poetry.dev-dependencies]
black = "24.4.2"
flake8 = "7.1.0"
isort = "5.13.2"
pre-commit = "3.7.1"
pytest = "8.2.2"
pytest-cov = "5.0.0"

##########################
# parsing dependencies
##########################

[tool.poetry.group.parsing]
optional = true

[tool.poetry.group.parsing.dependencies]
antlr4-python3-runtime = "4.13"
lark = "1.1.9"
latex2sympy = { git = "https://github.com/purdue-tlt/latex2sympy.git", rev = "1.11.2" }

##########################
# http / ws dependencies
##########################

[tool.poetry.group.http]
optional = true

[tool.poetry.group.http.dependencies]
fastapi = "^0.111.0"

##########################
# ipc dependencies
##########################

[tool.poetry.group.ipc]
optional = true

[tool.poetry.group.ipc.dependencies]
pywin32 = { version = "^306", platform = "win32" }


[tool.isort]
line_length = 88
force_single_line = true
force_grid_wrap = 0
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
filter_files = true
known_first_party = "lf_toolkit"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "LF", "FIRSTPARTY", "LOCALFOLDER"]
known_lf = [""]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
