[tool.poetry]
name = "lf_toolkit"
version = "0.0.1"
description = ""
authors = ["Andreas Pfurtscheller <andreas.pfurtscheller23@imperial.ac.uk>"]
readme = "README.md"
packages = [{ include = "lf_toolkit" }]
include = [{ path = "lf_toolkit/py.typed" }]

##########################
# core dependencies
##########################

[tool.poetry.dependencies]
python = "^3.11"
sympy = ">=1.12,<2.0"
ujson = "5.10.0"
anyio = "4.6.0"
jsonrpcserver = ">=5.0.9"

##########################
# parsing dependencies
##########################

antlr4-python3-runtime = { version = "4.13.2", optional = true }
lark = { version = "1.2.2", optional = true }
latex2sympy = { git = "https://github.com/purdue-tlt/latex2sympy.git", rev = "1.12.0", optional = true }

##########################
# http / ws dependencies
##########################

fastapi = { version = "^0.115.0", optional = true }

##########################
# ipc dependencies
##########################

pywin32 = { version = "^306", platform = "win32", optional = true }

##########################
# dev dependencies
##########################
poetry-plugin-export = "^1.9.0"

[tool.poetry.group.dev.dependencies]
black = "24.8.0"
flake8 = "7.1.1"
isort = "5.13.2"
pre-commit = "3.8.0"
pytest = "8.3.3"
pytest-cov = "5.0.0"

##########################
# extras
##########################

[tool.poetry.extras]
parsing = ["antlr4-python3-runtime", "lark", "latex2sympy"]
ipc = ["pywin32"]
http = ["fastapi"]

[tool.isort]
line_length = 88
force_single_line = true
force_grid_wrap = 0
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
filter_files = true
known_first_party = "lf_toolkit"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "LF", "FIRSTPARTY", "LOCALFOLDER"]
known_lf = [""]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
